...
      name:'Products',
      textStyle:styles.textOne,
      shadow:{shadowOpacity: 0},
      textElevation:0
    },
    {
      text: "Nuevo gasto",
      color:colors.buttonBackground,
      textBackground:'transparent',
      icon: require('../../assets/images/product.png'),
      name: otherProps.user.movements_limit ? "Buy" : 'nomovement',
      textStyle:styles.textOne,
      shadow:{shadowOpacity: 0},
...
          }}
        />
        <Tab.Screen
          name="Inventory"
          component={InventoryScreen}
          options={{
            title: 'Inventario',
            unmountOnBlur:true,  
            header:() => (
              <Header
                showHeader={true}
                onMore={() => otherProps.actions.showDrawer(true)}
              />
...
