...
            </Text>
          </TouchableOpacity>
        )}
        {onMore && (
          <TouchableOpacity
            testID="header-drawer-toggle"
            accessibilityLabel="Abrir menú"
            style={styles.supportCont}
            activeOpacity={0.9}
            onPress={onMore}>
            <Image
              resizeMode='cover'
              style={styles.more}
...
